# Cerberscrape

./: .env.sample  .gitignore  API_DATA_PULLING_GUIDE.md  API_KEYS_QUICK_REFERENCE.md  API_REVIEW_AND_FIXES.md  BACKEND_API_SETUP_GUIDE.md  BUSINESS_SIZE_FEATURES.md  DATA_SOURCES.md  DEPLOYMENT_CHECKLIST.md  Dockerfile  FRONTEND_TEAM_HANDOFF.md  IMPLEMENTATION_SUMMARY.md  Makefile  PRODUCTION_READY_CHECKLIST.md  PROJECT_SUMMARY.md  README.md  REVIEW_COMPLETE.md  WHAT_YOU_NEED_TO_PULL_REAL_DATA.md  amplify.yml  aws-deploy.sh  aws-setup.md  docker-compose.yml  pyproject.toml  requirements.txt  serverless.yml  setup.sh  test_basic.py  test_basic_connectors.py  test_connectors.py  test_real_data_pull.py  verify_api_keys.py
apps/api/: __init__.py  main.py
apps/cli/: main.py
apps/ui/: .env.example  index.html  package.json  vite.config.ts
apps/ui/src/: App.tsx  aws-config.ts  main.tsx
core/: aws.py  config.py  db.py  models.py  preview.py  schemas.py
core/pipeline/: business.py  business_size.py  dedupe.py  export.py  normalize.py  qa.py  rfp.py  score.py
core/pipeline/enrich/: geocode_census.py
core/pipeline/ingest/: __init__.py  grants_gov.py  nppes.py  opencorporates.py  sam_opps.py  state_example.py  state_manual.py
scripts/: run_jobs.py
tests/: test_business_size.py  test_dedupe.py  test_export.py  test_filters.py  test_rfp_api.py
