[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dataforge"
version = "0.1.0"
description = "DataForge in-house data puller for business and RFP datasets"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [{name = "DataForge Team"}]
dependencies = [
    "alembic>=1.13",
    "apscheduler>=3.10",
    "fastapi>=0.111",
    "httpx>=0.26",
    "pydantic>=2.7",
    "pydantic-settings>=2.2",
    "python-dotenv>=1.0",
    "requests>=2.32",
    "sqlalchemy>=2.0",
    "tenacity>=8.3",
    "typer>=0.12",
    "uvicorn[standard]>=0.29",
    "rapidfuzz>=3.9",
    "usaddress>=0.5",
    "phonenumbers>=8.13",
    "pandas>=2.2",
    "python-dateutil>=2.9",
    "aiofiles>=23.2",
    "email-validator>=2.1"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "pytest-mock>=3.14",
    "pytest-cov>=5.0",
    "httpx>=0.26",
    "black>=24.4",
    "ruff>=0.5"
]

[project.scripts]
dataforge = "apps.cli.main:app"

[tool.ruff]
line-length = 100
select = ["E", "F", "B", "I", "UP", "S"]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-q"
pythonpath = ["."]
testpaths = ["tests"]


